# BigData_Proj_Fraud_detection

./: README.md  app.py  cleanup.bat  converted_script.py  notebookea45800a36.ipynb  pyproject.toml  requirements.txt  run.bat  setup.bat
DataSet/: batch_template.csv  customers.csv
models/: merchant_categories.json  model_info.json  preprocessing_config.json
processed_fraud_data_balanced.parquet/: part-00000-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00001-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00002-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00003-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00004-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00005-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00006-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00007-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00008-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00009-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00010-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00011-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00012-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00013-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00014-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00015-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  part-00016-5f1f2a25-04df-4fca-bade-353d6918d1da-c000.snappy.parquet  (+33 more)
(+13 files in other folders)
